# turbo-note-taker

./: .gitignore  CLAUDE.md  LICENSE  README.md  REQUIREMENTS.md
.github/: README.md
.github/workflows/: README.md  backend-tests.yml  ci.yml  code-quality.yml  deploy.yml  frontend-tests.yml  integration-tests.yml  security.yml
backend/: .gitignore  README.md  manage.py  pyproject.toml
backend/notes/: README.md  admin.py  auth_views.py  models.py  serializers.py  urls.py  views.py
backend/notes/migrations/: 0001_initial.py  0002_alter_note_content.py  README.md
backend/notes_backend/: README.md  asgi.py  settings.py  urls.py  wsgi.py
docs/: API.md  ARCHITECTURE.md  CI.md  DJANGO_GUIDE.md  INTERVIEW_QA.md  README.md  WALKTHROUGH.md
frontend/: .prettierignore  README.md  next.config.js  package.json  tsconfig.json
frontend/src/: README.md
frontend/src/app/: README.md  layout.tsx  page-full-components.tsx  page-full.tsx  page-redirect.tsx  page-simple.tsx  page.tsx
frontend/src/app/auth/: README.md
frontend/src/app/auth/login/: README.md  page.tsx
frontend/src/app/auth/signup/: README.md  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: CategoryManager.tsx  Header.tsx  NoteEditor.tsx  NotesList.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  dateUtils.ts
frontend/src/types/: index.ts
scripts/: README.md  verify-ci.sh
